cabal-version:      2.4
name:               location-history-json-converter-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Frederick Price
maintainer:         rprice@pricemail.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable location-history-json-converter-hs
    ghc-options:
        -- For details on warnings: https://downloads.haskell.org/~ghc/master/users-guide/using-warnings.html
        -- This list taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
        -- Enable all warnings with -Weverything, then disable the ones we don’t care about
        -Weverything
        -Wno-missing-exported-signatures
        -Wno-missing-import-lists
        -Wno-missed-specialisations
        -Wno-all-missed-specialisations
        -Wno-unsafe
        -Wno-safe
--        -Wno-missing-local-signatures
        -Wno-monomorphism-restriction
        -O2

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Model

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
      tar,
      bytestring,
      zlib,
      aeson,
      -- text,
      time
    hs-source-dirs:   app
    default-language: Haskell2010
